<resources>
    <string name="app_name">Calculator</string>
    <string name="add">+</string>
    <string name="clear">CLEAR</string>
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="substract">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="result">Result :</string>
</resources>