<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <EditText
        android:id="@+id/num1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_number"
        android:layout_marginTop="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/num2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_number"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num1"/>

    <GridLayout
        android:id="@+id/operationLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/num2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textSize="30sp"
            android:layout_row="0"
            android:layout_column="0"/>

        <Button
            android:id="@+id/btnSub"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/substract"
            android:layout_marginStart="40sp"
            android:textSize="30sp"
            android:layout_row="0"
            android:layout_column="1"/>

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:layout_row="1"
            android:layout_column="0"/>

        <Button
            android:id="@+id/btnMul"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:text="@string/multiply"
            android:textSize="30sp"
            android:layout_row="1"
            android:layout_column="1"/>
    </GridLayout>


    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operationLayout"/>


</androidx.constraintlayout.widget.ConstraintLayout>